<resources>
    <string name="app_name">Nexus Scribes</string>
    <string name="welcome_to">Welcome to</string>
    <string name="nexus_title">Nexus</string>
    <string name="scribes_title">Scribes</string>
    <string name="embark_button">Embark</string>
    <string name="pen_icon">pen_icon</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="quill_icon">quill_icon</string>
    <string name="log_in_banner">Log In</string>
    <string name="new_user">New? Create Identity</string>
    <string name="click_hint">Click to Begin</string>
    <string name="new_profile_btn">New Profile</string>
    <string name="new_profile_banner">Create New Profile</string>
    <string name="log_in">Log In</string>
    <string name="profile_image">Profile Image</string>
    <string name="required">Required*</string>
    <string name="full_name_hint">Full Name</string>
    <string name="add_your_image_hint">Add Your Image</string>
    <string name="email_address_hint">Email Address (Log-In Credential)</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="already_a_member_click_here">Already a Member? Click here</string>
    <string name="age_calculated">Age:</string>
    <string name="date_appears_here_hint">Date Appears Here</string>
    <string name="instagram_url">Instagram URL (Optional)</string>
    <string name="facebook_url">Facebook URL (Optional)</string>
    <string name="twitter_url">Twitter URL (Optional)</string>
    <string name="pen_author_or_nickname">Pen/Author Name (Optional)</string>
    <string name="about_yourself">About Yourself</string>
    <string name="password_min_8_characters">Password (Log-In Credential)</string>
    <string name="submit">Submit</string>
    <string name="password_requirements_text">Password Requirements:</string>
    <string name="passCheck">passCheck</string>
    <string name="minimum_8_characters_rule">Minimum 8 Characters</string>
    <string name="minimum_1_symbol_rule">Minimum 1 Symbol</string>
    <string name="minimum_1_number_rule">Minimum 1 Number</string>
    <string name="minimum_1_uppercase_rule">Minimum 1 Uppercase</string>
    <string name="your_age_text">Your Age:</string>
    <string name="dob_disclaimer">Your DOB is used for age verification purposes only.</string>
    <string name="pen_name_disclaimer">Note: A provided Pen Name will replace your otherwise defaulted Full Name when displayed</string>
    <string name="photo_is_required">Photo is Required</string>
    <string name="full_name_error_text">Full Name is Required</string>
    <string name="email_error_text">Email Address is Required or invalid</string>
    <string name="dob_error_text"><![CDATA[Required & Must be 18 or Older]]></string>
    <string name="user_name_error_text">User Name Required.</string>
    <string name="password_error_text">Password is Required</string>
    <string name="bio_error_text">At least one line about yourself is Required</string>
    <string name="symbols_verify">^(?=.*[_@#!$%^.()]).*$</string>
    <string name="numbers_verify">(.*[0-9].*)</string>
    <string name="caps_verify">(.*[A-Z].*)</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="navbar_nexus_scribes">Nexus Scribes</string>
    <string name="navigate_home">Navigate Home</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="about_the_author">About the Author:</string>
    <string name="author_profile_pic">Author Profile Pic</string>
    <string name="the_authors_gallery">The Authors Gallery</string>
    <string name="add_your_publication">Add Your Publication</string>
    <string name="book_title_error_text">Book title is required</string>
    <string name="synopsis_error_text">At least one line about the book is required</string>
    <string name="book_synopsis">Book Synopsis</string>
    <string name="book_title">Book Title</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="publish_btn">PUBLISH</string>
    <string name="book_cover_pic">Book Cover pic</string>
    <string name="the_publication_gallery">The Publication Gallery</string>
    <string name="Author_add_name_hint">Meet the Author</string>
    <string name="book_synopsis_text">Book Synopsis</string>
    <string name="select_user">Chat Forum</string>
    <string name="active_users">Active Users</string>
    <string name="currentMessages">CurrentMessages</string>
    <string name="enter_your_message">Enter your message</string>
</resources>