<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/welcome_to"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/titles"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="10dp"
        android:background="@drawable/background_title"  >

        <TextView
            android:id="@+id/nexus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/tech"
            android:text="@string/nexus_title"
            android:textSize="50sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/scribes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/script"
            android:gravity="end"
            android:text="@string/scribes_title"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="350dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/embarkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/black"
            android:text="@string/embark_button"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/titles"
            android:pointerIcon="hand"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/quill"
            android:contentDescription="@string/pen_icon"/>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>