<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".LogIn_NewProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@drawable/background_banner"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/nexus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/tech"
                android:text="@string/nexus_title"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/icon_banner"
                android:layout_width="45dp"
                android:layout_height="55dp"
                android:contentDescription="@string/quill_icon"
                android:src="@drawable/ic_banner" />

            <TextView
                android:id="@+id/scribes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/script"
                android:text="@string/scribes_title"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="40sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:background="@drawable/background_edit_text"
            android:elevation="@dimen/cardview_default_elevation">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/log_in_banner"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/titles"
                android:textColor="@color/black"
                android:background="@drawable/background_form_banner" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_email_address"
                app:hintTextAppearance="@style/TextLabel"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/etLogInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Email Address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/logInEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/email_error_text"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/logInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_password"
                app:hintTextAppearance="@style/TextLabel"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/etLogInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/logInPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/password_error_text"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/black"
                    android:text="@string/log_in"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/titles" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="30dp"
            android:orientation="vertical"
            android:background="@drawable/background_edit_text"
            android:elevation="@dimen/cardview_default_elevation">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/new_user"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/titles"
                android:textColor="@color/black"
                android:background="@drawable/background_form_banner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="1dp"
                android:text="@string/click_hint"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/newProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/custom_button"
                android:textColor="@color/black"
                android:text="@string/new_profile_btn"
                android:textSize="26sp"
                android:textStyle="bold"
                android:fontFamily="@font/titles" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>