<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome_to"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="410dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:gravity="center"
        android:elevation="10dp"
        android:background="@drawable/background_title"  >

        <TextView
            android:id="@+id/nexus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/tech"
            android:text="@string/nexus_title"
            android:textSize="50sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/scribes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/script"
            android:gravity="end"
            android:text="@string/scribes_title"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>